[gd_scene load_steps=15 format=3 uid="uid://detnxs05jctwf"]

[ext_resource type="Script" path="res://src/Actors/Players/Sheep.gd" id="1_2bi6n"]
[ext_resource type="Texture2D" uid="uid://bdcuwuep6hfbt" path="res://src/Actors/Players/Sheep/sheep-idle.png" id="1_87buc"]
[ext_resource type="Script" path="res://src/Actors/Players/SheepStateMachine.gd" id="1_i67k0"]
[ext_resource type="Texture2D" uid="uid://whcx481cqqfs" path="res://src/Actors/Players/Sheep/sheep-walking.png" id="2_a6gni"]
[ext_resource type="Texture2D" uid="uid://bds1nqik5coe8" path="res://src/Actors/Players/Sheep/sheep-turn.png" id="2_t1trx"]
[ext_resource type="Script" path="res://src/Actors/Players/States/Sheep/SheepStateIdle.gd" id="4_1et44"]
[ext_resource type="PackedScene" uid="uid://dthmsw8atnen" path="res://src/Shared/StateMachineDebug.tscn" id="4_a756p"]
[ext_resource type="Script" path="res://src/Actors/Players/States/Sheep/SheepStateWalking.gd" id="6_n3c7p"]
[ext_resource type="Script" path="res://src/Actors/Players/States/Sheep/SheepStateTurn.gd" id="8_ahxuj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7cnq6"]
radius = 6.0
height = 22.0

[sub_resource type="Animation" id="Animation_6naan"]
resource_name = "Idle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_87buc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_5280c"]
resource_name = "Walking"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_a6gni")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_bvars"]
resource_name = "Turn"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_t1trx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0gjw"]
_data = {
"Idle": SubResource("Animation_6naan"),
"Turn": SubResource("Animation_bvars"),
"Walking": SubResource("Animation_5280c")
}

[node name="Sheep" type="CharacterBody2D"]
script = ExtResource("1_2bi6n")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -32)
texture = ExtResource("2_t1trx")
hframes = 3
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -6)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7cnq6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d0gjw")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("animationPlayer", "actor")]
script = ExtResource("1_i67k0")
animationPlayer = NodePath("../AnimationPlayer")
actor = NodePath("..")

[node name="StateIdle" type="Node" parent="StateMachine"]
script = ExtResource("4_1et44")
animation_name = "Idle"

[node name="StateWalking" type="Node" parent="StateMachine"]
script = ExtResource("6_n3c7p")
can_move = true
animation_name = "Walking"

[node name="StateTurn" type="Node" parent="StateMachine"]
script = ExtResource("8_ahxuj")
animation_name = "Turn"

[node name="StateMachineDebug" parent="." node_paths=PackedStringArray("state_machine") instance=ExtResource("4_a756p")]
offset_left = -46.0
offset_top = -41.0
offset_right = 57.0
offset_bottom = -15.0
state_machine = NodePath("../StateMachine")
